# ece435-final-project

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
eval/: config.json  eval.py  eval_results.ipynb  generate_answers.py  helpful_results.json  joint_results.json  ppo_answers.json  problem.json  sft_answers.json
job_scripts/: eval.slurm  finetune_model.slurm  load_model.slurm  ppo_accelerate.slurm  ppo_multi_gpu.slurm  ppo_multi_gpu_long.slurm  ppo_vanilla.slurm  safe_rlhf.sh  safe_rlhf.slurm  test_ppo.slurm
scripts/: check_tokens.py  download_cache.py  slurm-63787119.out  slurm-64148085.out  slurm-64167946.out  visualize_graph.py  visualize_output.py
src/ece435_final_project/: dataloader.py  eval.py  finetune.py  pipeline.py  ppo_vanilla.py  ppo_vanilla_accelerate.py  ppo_vanilla_long.py  ppo_vanilla_revised.py  safe.rlhf.py
